ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodstore-ingress
  namespace: ingress-basic
spec:
  rules:
  - host: "devopshat.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
